--- a/vignettes/mcse.bib
+++ b/vignettes/mcse.bib
@@ -9,10 +9,13 @@
   publisher={Taylor \& Francis}
 }
 @article{vats2015strong,
-  title={Strong Consistency of Multivariate spectral Variance Estimators in {M}arkov chain {M}onte {C}arlo},
-  author={Vats, Dootika and Flegal, James M and Jones, Galin L},
-  journal={Bernoulli (to appear)},
-  year={2017}
+   author = {{Vats}, D. and {Flegal}, J.~M. and {Jones}, G.~L.},
+    title = {Strong Consistency of Multivariate Spectral Variance Estimators in {M}arkov Chain {M}onte {C}arlo},
+  journal={Bernoulli},
+  volume={24},
+  pages={1860--1909},
+  year={2018},
+  publisher={Bernoulli Society for Mathematical Statistics and Probability}
 }
 
 @article{dai2017multivariate,
@@ -23,10 +26,13 @@
 }
 
 @article{vats:fleg:jones:2017b,
-  title={Multivariate Output Analysis for {M}arkov chain {M}onte {C}arlo},
-  author={Vats, Dootika and Flegal, James M and Jones, Galin L},
-  journal={arXiv preprint arXiv:1512.07713},
-  year={2017}
+   author = {{Vats}, D. and {Flegal}, J.~M. and {Jones}, G.~L.},
+    title = {Multivariate Output Analysis for {M}arkov chain {M}onte {C}arlo},
+  journal={Biometrika},
+  volume={106},
+  pages={321--337},
+  year={2019},
+  publisher={Oxford University Press}
 }
 
 @article{jones2006fixed,
@@ -48,3 +54,20 @@
   year={2010},
   publisher={Institute of Mathematical Statistics}
 }
+
+@article{vats:fleg:2018,
+  title={Lugsail lag windows and their application to {MCMC}},
+  author={Vats, Dootika and Flegal, James M},
+  journal={arXiv preprint arXiv:1809.04541},
+  year={2018}
+}
+@article{liu:fleg:2018,
+  author =   {Liu, Y and Flegal, J.M.},
+  title =   {Weighted batch means estimators in {M}arkov chain {M}onte {C}arlo},
+  year =   {2018},
+journal = "Electronic Journal of Statistics",
+pages = "3397--3442",
+publisher = "The Institute of Mathematical Statistics and the Bernoulli Society",
+volume = "12",
+} 
+
