--- a/vignettes/mcmcse_vignette.Rnw
+++ b/vignettes/mcmcse_vignette.Rnw
@@ -38,7 +38,7 @@
 
 \break
 \section{Introduction}
-The R package \texttt{mcmcse} provides estimates of Monte Carlo standard errors for Markov chain Monte Carlo (MCMC). This package is useful when estimating means and quantiles of functions of the MCMC output. In addition to MCMC output, the package can be used for time series and other correlated processes. 
+The R package \texttt{mcmcse} provides estimates of Monte Carlo standard errors for Markov chain Monte Carlo (MCMC) when estimating means or quantiles of functions of the MCMC output. In addition to MCMC output, the package can be used for time series and other correlated processes. 
 
 The package is predominantly useful after MCMC output has been obtained by the user. In addition to estimating the Monte Carlo standard errors, the package also provides univariate and multivariate estimates of effective sample size and tools to determine whether enough Monte Carlo samples have been obtained. There are also some graphical tools to ascertain the behavior of the Monte Carlo estimates.
 
@@ -72,7 +72,7 @@ set.seed(100)
 chain <- mAr.sim(w = rep(2,p), A = A, C = C, N = N)
 @
 
-For using the \texttt{mcmcse} package the rows of the MCMC output should store each iteration of the algorithm. Thus the output should have $n$ rows and $p$ columns. We will denote each row $i$ of the output as $(y^{(1)}_i, y^{(2)}_i, y^{(3)}_i)$.
+For using the \texttt{mcmcse} package the rows of the MCMC output should store each iteration of the algorithm and so the output should have $n$ rows and $p$ columns. We will denote each row $i$ of the output as $y_i = (y^{(1)}_i, y^{(2)}_i, y^{(3)}_i)$.
 <<foo, echo = FALSE >>=
 colnames(chain) <- c("Y1", "Y2", "Y3")
 @
@@ -87,13 +87,13 @@ This vignette will discuss estimating two sets of features of interest of $F$.
 	\item $\text{E}_F y$: For estimating $\mu = \text{E}_Fy$, the estimator is the Monte Carlo sample mean
 \[ \mu_n = \dfrac{1}{n} \displaystyle \sum_{t=1}^{n} y_t.\]
 
-In \texttt{R}, $\mu_n$ is obtained using the usual \texttt{colMeans} function. If $p = 1$, then use \texttt{mean} instead oc \texttt{colMeans}.
+In \texttt{R}, $\mu_n$ is obtained using the usual \texttt{colMeans} function. If $p = 1$, then use \texttt{mean} instead of \texttt{colMeans}.
 
 <<means>>=
  colMeans(chain)
 @
 
-	\item $\text{E}_F (y^{(1)2} + y^{(2)2} + y^{(3)2})$: When interested in estimating the sum of the second moments of each component of $y$,  define the function $g: \mathbb{R}^3 \to \mathbb{R}$ as $g((x_1,x_2,x_3)) = x_1^2 + x_2^2 + x_3^2$. This is defined in \texttt{R} by creating a function that takes a vector argument.
+	\item $\text{E}_F \left(y^{(1)2} + y^{(2)2} + y^{(3)2} \right)$: When interested in estimating the sum of the second moments of each component of $y$,  define the function $g: \mathbb{R}^3 \to \mathbb{R}$ as $g((x_1,x_2,x_3)) = x_1^2 + x_2^2 + x_3^2$. This is defined in \texttt{R} by creating a function that implements the function $g$, row-wise.
 
 <<g>>=
 g <- function(x)
@@ -126,7 +126,7 @@ and
 \sqrt{n}(\mu_{g,n} - \mu) \overset{d}{\to} N_p(0, \Sigma_g)\,,
 \end{equation}
 
-then estimates of $\Sigma$ and $\Sigma_g$ must be reported. Since the samples obtained are correlated, these quantities require more sophisticated tools than usual sample estimators.
+then estimates of $\Sigma$ and $\Sigma_g$ must be reported, directly or indirectly. Since the samples obtained are correlated, these quantities require more sophisticated tools than usual sample estimators.
 (Note that a Markov chain CLT is not always guaranteed to hold. In fact, it depends on the rate of convergence of the Markov chain. Most of the functions in this package assume that a Markov chain CLT holds. Such an assumption is also made when using many of the convergence diagnostics).
 
 \section{Estimating Monte Carlo Standard Error}
@@ -142,41 +142,57 @@ Using the \texttt{mcmcse} package we can estimate $\Sigma$ in \eqref{eq:clt} wit
 
 <<mcse>>=
 library(mcmcse)
-mcerror_bm <- mcse.multi(x = chain, method =  "bm", 
-	size = "sqroot", g = NULL, level = .95, large = FALSE)
-mcerror_bart <- mcse.multi(x = chain, method =  "bartlett", 
-	size = "cuberoot", g = NULL, level = .95, large = FALSE)
-mcerror_tuk <- mcse.multi(x = chain, method =  "tukey", 
-	size = "sqroot", g = NULL, level = .95, large = FALSE)
+
+# Batch means estimator
+mcerror_bm <- mcse.multi(x = chain, method =  "bm", r = 1,
+	size = NULL, g = NULL, adjust = TRUE, blather = TRUE)
+
+# Overlapping batch means estimator
+mcerror_bm <- mcse.multi(x = chain, method =  "obm", r = 1,
+	size = NULL, g = NULL, adjust = TRUE, blather = TRUE)
+
+# Spectral variance estimator with Bartlett window
+mcerror_bart <- mcse.multi(x = chain, method =  "bartlett", r = 1,
+	size = NULL, g = NULL, adjust = TRUE, blather = TRUE)
+
+# Spectral variance estimator with Tukey window
+mcerror_tuk <- mcse.multi(x = chain, method =  "tukey", r = 1,
+	size = NULL, g = NULL, adjust = TRUE, blather = TRUE)
+
+# Initial sequence estimator, unadjusted
 mcerror_is <- mcse.initseq(x = chain, g = NULL, 
-                           level = .95, adjust = FALSE)
+                           adjust = FALSE, blather = TRUE)
+
+# Initial sequence estimator, adjusted
 mcerror_isadj <- mcse.initseq(x = chain, g = NULL, 
-                              level = .95, adjust = TRUE)
+                              adjust = TRUE, blather = TRUE)
 @
 
 \begin{itemize}
 	\item \texttt{x} takes the $n \times p$ MCMC data. \texttt{x} can take only numeric entries in the form of a matrix or data frame. The rows of \texttt{x} are the iterations of the MCMC.
 
-	\item \texttt{method = ``bm'', ``bartlett'', ``tukey''} calculates the estimate using the batch means method and spectral variance methods with the modified-Bartlett and Tukey-Hanning windows.
+	\item \texttt{method = bm, obm, bartlett, tukey} calculates the estimate using the batch means method and spectral variance methods with the modified-Bartlett and Tukey-Hanning windows.
+	
+	\item \texttt{r} is the lugsail parameter that indicates how much to "lift" the lag window (this also  applies to \texttt{bm} and \texttt{obm}). Higher values will increasingly remove underestimation of $\Sigma$ but may yield more variable estimators. Values more than 5 are not advised and negative values are not allowed. Reasonable choices are $r = 1, 2, 3$, where $r = 3$ yields the lugsail estimator, $r = 2$ is the flat-top estimator, and $r = 1$ is the vanilla estimator. 
 
-	\item \texttt{size} is the batch size for the \texttt{bm} method and the truncation point for \texttt{tukey} and \texttt{bartlett} methods.  \texttt{size = ``sqroot''} sets the size as $\lfloor \sqrt{n} \rfloor$ and \texttt{size = ``cuberoot''} sets it at $\lfloor n^{1/3} \rfloor$. An integer value of \texttt{size} less than $n$ is also valid.
+	\item \texttt{size} is the batch size for the \texttt{bm} method and the truncation point for \texttt{tukey} and \texttt{bartlett} methods. Default batch size is calulcated using the exported \texttt{batchSize} function. Other accepted values are \texttt{size = sqroot}, which sets the size as $\lfloor \sqrt{n} \rfloor$ and \texttt{size = cuberoot} which sets it at $\lfloor n^{1/3} \rfloor$. An integer value of \texttt{size} less than $n$ is also valid as long as $n/\texttt{size} > 1$.
 	
 For reference on \texttt{bm} (batch means estimators) see \cite{jones2006fixed} and \cite{vats:fleg:jones:2017b}.
 
 For reference on \texttt{bartlett} and \texttt{tukey} (spectral variance estimators)see \cite{flegal2010batch} and \cite{vats2015strong}.
 
+For reference on lugsail estimation see \cite{liu:fleg:2018} and \cite{vats:fleg:2018}.
+
 	\item \texttt{g} is a function that is applied to each row of \texttt{x} and represents the features of interest of the process. Since here we are interested in only means, \texttt{g} is \texttt{NULL}. \texttt{g} will be explained in later examples.
-
-	\item \texttt{level} is the confidence level of the resulting confidence region. This is required to calculate the volume of the confidence region.
-
-	\item \texttt{large} is a logical argument. If \texttt{large} is \texttt{TRUE} the volume of the confidence region is the large sample volume obtained using $\chi^2$ critical values. By default, volume is calculated using $F$ distribution critical values.
 	
-	\item \texttt{adjust} is a logical argument only used for the \texttt{mcse.initseq} function. If \texttt{adjust} is \texttt{TRUE}, the eigenvalues of the initial sequence estimator are increased slightly.
+	\item \texttt{adjust} is a logical argument indicating whether the resulting matrix should be adjusted in order to retain positive-definiteness. By default this is set to be \texttt{TRUE}.
+	
+	\item \texttt{blather} when TRUE outputs under the hood information about the estimation process. The default is set to \texttt{FALSE} since most users should be interested in only \texttt{cov} and \texttt{est}.
 	
 For reference on \texttt{mcse.initseq} (initial sequence estimators) see \cite{dai2017multivariate}.
 \end{itemize}
 
-\texttt{mcse.multi} and \texttt{mcse.initseq} return a list with multiple components. \texttt{cov} stores the estimate of $\Sigma$ obtained using the method chosen, \texttt{vol} returns the volume to the $p$th root of the resulting confidence region, \texttt{est} stores the estimate of $g$ applied on the Markov chain and \texttt{nsim}  stores the arguments used to calculate $\Sigma$. \texttt{mcse.multi} also returns \texttt{size} which indicates the size of batches/truncation, \texttt{method} used, and whether a \texttt{large} sample volume is returned. \texttt{mcse.initseq} also returns \texttt{cov.adj}, \texttt{vol.adj}, and whether an adjusted estimator was used (\texttt{adjust}).
+\texttt{mcse.multi} and \texttt{mcse.initseq} return a list with multiple components. When \texttt{blather = FALSE} \texttt{cov} stores the estimate of $\Sigma$ obtained using the method chosen, \texttt{est} stores the estimate of the mean of $g$ applied on the Markov chain. When \texttt{blather = TRUE} the following are returned in addition to the above two: \texttt{nsim}  stores the arguments used to calculate $\Sigma$.  \texttt{size} which indicates the size of batches/truncation, \texttt{method} used. \texttt{mcse.initseq} also returns \texttt{cov.adj}, and whether an adjusted estimator was used (\texttt{adjust}).
 
 <<outputvalue>>=
 mcerror_bm$cov
@@ -191,17 +207,11 @@ mcerror_isadj$cov.adj
 
 rbind(mcerror_bm$est, mcerror_bart$est, mcerror_tuk$est,
       mcerror_is$est, mcerror_isadj$est)
-
-c(mcerror_bm$vol, mcerror_bart$vol, mcerror_tuk$vol,
-  mcerror_is$vol, mcerror_isadj$vol)
 @
 
 
 
-\textbf{Note: } the Monte Carlo estimates of $\mu$ are not affected by the choice of the method.
-
-\bigskip
-\textbf{Note: } the initial sequence estimators of $\Sigma$ have larger volume than the consistent estimators. This is expected since initial sequence estimators are intentionally conservative.
+\textbf{Note: } The Monte Carlo estimates of $\mu$ are not affected by the choice of the method.
 
 \bigskip
 \textbf{Note: } for consistent estimation, the batch means estimators are significantly faster to calculate than the spectral variance estimators. The user is advised to use the default \texttt{method = ``bm''} for large input matrices.
@@ -222,8 +232,8 @@ In order to estimate $\mu_{n,g}$ and $\Sigma_g$ as in \eqref{eq:g_clt}, we use t
 
 <<sigma_g>>=
 g
-mcerror_g_bm <- mcse.multi(x = chain, g = g)
-mcerror_g_is <- mcse.initseq(x = chain, g = g)
+mcerror_g_bm <- mcse.multi(x = chain, g = g, blather = TRUE)
+mcerror_g_is <- mcse.initseq(x = chain, g = g, blather = TRUE)
 
 mcerror_g_bm$cov
 
@@ -359,8 +369,8 @@ chain <- mAr.sim(w = rep(2,p), A = A, C = C, N = 10000)
 For this new Markov chain, we find an estimate of $\Sigma$ to use for the \texttt{qqTest} function.
 
 <<qq, out.width = '8cm'>>=
-mcerror_bm <- mcse.multi(chain, method = "bm")
-mcerror_isadj <- mcse.initseq(chain, adjust = TRUE)
+mcerror_bm <- mcse.multi(chain, method = "bm", blather = TRUE)
+mcerror_isadj <- mcse.initseq(chain, adjust = TRUE, blather = TRUE)
 qqTest(mcerror_bm)
 qqTest(mcerror_isadj)
 @
